Fix answer background color when using Dark Mode in Ponder
Summary:
This CSS fix replaces the hard coded white background value by the page.content CSS variable.

| Before  | After   |
|---------|---------|
|{F332921}|{F332922}|

Test Plan:
- Flush all Phorge caches
- Sign in
- Go to question with at least one answer.
- Check that the answer block background color is consistent with the theme.
- Do these steps for each user interface theme in order to check against regression.

Reviewers: O1 Blessed Committers, valerio.bozzolan

Reviewed By: O1 Blessed Committers, valerio.bozzolan

Subscribers: tobiaswiese, valerio.bozzolan, Matthew, Cigaryno

Differential Revision: https://we.phorge.it/D25393

--- a/webroot/rsrc/css/application/ponder/ponder-view.css
+++ b/webroot/rsrc/css/application/ponder/ponder-view.css
@@ -77,7 +77,7 @@
 }
 
 .ponder-answer-view .ponder-answer-content {
-  background-color: #fff;
+  background-color: {$page.content};
   padding: 16px 16px 0 16px;
 }
 
